[gd_scene load_steps=22 format=3 uid="uid://c3nf02glhhiyf"]

[ext_resource type="Script" uid="uid://0w0uio2gpsjt" path="res://scenes/ui/resource_bar/resource_bar.gd" id="1_q0fmj"]
[ext_resource type="Texture2D" uid="uid://nf8j07din755" path="res://assets/textures/ui/minimal_bar.png" id="2_enuo2"]
[ext_resource type="Texture2D" uid="uid://dwwvve1is2o4i" path="res://assets/textures/ui/minimal_bar_fill.png" id="3_ndcvt"]
[ext_resource type="Script" uid="uid://8p1m5wixkjkr" path="res://scenes/ui/effect_container_holder/effect_container_holder.gd" id="4_8ejy8"]
[ext_resource type="Shader" uid="uid://2iyv7xdg88rp" path="res://resources/shaders/global_colors.gdshader" id="4_s6pg1"]
[ext_resource type="PackedScene" uid="uid://4qjx8c3wfygx" path="res://scenes/ui/generic_label/generic_label.tscn" id="4_t71nv"]
[ext_resource type="Texture2D" uid="uid://b8qvddt5to7nu" path="res://assets/textures/ui/minimal_bar_fill_with_tip.png" id="4_ukof4"]
[ext_resource type="Script" uid="uid://byyf7c3vsi1r3" path="res://scenes/ui/resource_bar/label_margin_container.gd" id="5_7uckv"]
[ext_resource type="PackedScene" uid="uid://duwxqia2hvbth" path="res://scenes/ui/generic_panel/generic_panel.tscn" id="6_a6n1e"]
[ext_resource type="Texture2D" uid="uid://cain1lwf4wicd" path="res://assets/textures/ui/small_panel_background.png" id="7_iirm8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j1vjv"]
texture = ExtResource("2_enuo2")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_686xi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qxgu"]
texture = ExtResource("3_ndcvt")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8d0rt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g4rko"]
texture = ExtResource("3_ndcvt")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f2igm"]
texture = ExtResource("4_ukof4")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
expand_margin_right = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_llqsw"]
resource_local_to_scene = true
shader = ExtResource("4_s6pg1")
shader_parameter/type = 1
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ry73u"]
resource_local_to_scene = true
shader = ExtResource("4_s6pg1")
shader_parameter/type = 1
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hxxin"]
resource_local_to_scene = true
shader = ExtResource("4_s6pg1")
shader_parameter/type = 4
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 1
shader_parameter/outline_color = Color(0.054902, 0.0823529, 0.113725, 1)
shader_parameter/outline_pattern = 2
shader_parameter/add_margins = false
shader_parameter/width = 1.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7aeyj"]
resource_local_to_scene = true
shader = ExtResource("4_s6pg1")
shader_parameter/type = 4
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 1
shader_parameter/outline_color = Color(0.054902, 0.0823529, 0.113725, 1)
shader_parameter/outline_pattern = 2
shader_parameter/add_margins = false
shader_parameter/width = 1.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mil1q"]
resource_local_to_scene = true
shader = ExtResource("4_s6pg1")
shader_parameter/type = 4
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 1
shader_parameter/outline_color = Color(0.054902, 0.0823529, 0.113725, 1)
shader_parameter/outline_pattern = 2
shader_parameter/add_margins = false
shader_parameter/width = 1.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[node name="ResourceBar" type="MarginContainer" node_paths=PackedStringArray("back_panel", "effect_container_holder", "max_amount_label", "amount_label", "misc_label", "progress_bar_under", "progress_bar_main", "progress_bar_over", "label_margin_container", "debuffs_container", "label_container")]
custom_minimum_size = Vector2(0, 11)
offset_right = 75.0
offset_bottom = 11.0
size_flags_vertical = 4
script = ExtResource("1_q0fmj")
back_panel = NodePath("HBoxContainer/MarginContainer/BackPanel")
effect_container_holder = NodePath("HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/DebuffsContainer/EffectContainerHolder")
max_amount_label = NodePath("HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/MarginContainer/HBoxContainer/MaxAmountLabel")
amount_label = NodePath("HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/MarginContainer/HBoxContainer/AmountLabel")
misc_label = NodePath("HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/MarginContainer/HBoxContainer/MiscLabel")
progress_bar_under = NodePath("HBoxContainer/MarginContainer/MainBarContainer/ProgressBarUnder")
progress_bar_main = NodePath("HBoxContainer/MarginContainer/MainBarContainer/ProgressBarMain")
progress_bar_over = NodePath("HBoxContainer/MarginContainer/MainBarContainer/ProgressBarOver")
label_margin_container = NodePath("HBoxContainer/MarginContainer/Container/LabelMarginContainer")
debuffs_container = NodePath("HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/DebuffsContainer")
label_container = NodePath("HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer")
metadata/_edit_horizontal_guides_ = [3.0]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackPanel" type="Panel" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_j1vjv")

[node name="MainBarContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="ProgressBarUnder" type="ProgressBar" parent="HBoxContainer/MarginContainer/MainBarContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_686xi")
theme_override_styles/fill = SubResource("StyleBoxTexture_8qxgu")
value = 57.92
show_percentage = false

[node name="ProgressBarMain" type="ProgressBar" parent="HBoxContainer/MarginContainer/MainBarContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_8d0rt")
theme_override_styles/fill = SubResource("StyleBoxTexture_g4rko")
value = 57.92
show_percentage = false

[node name="ProgressBarOver" type="ProgressBar" parent="HBoxContainer/MarginContainer/MainBarContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_8d0rt")
theme_override_styles/fill = SubResource("StyleBoxTexture_f2igm")
show_percentage = false

[node name="Container" type="Container" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="LabelMarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/Container"]
z_index = 1
layout_mode = 2
theme_override_constants/margin_left = -5
theme_override_constants/margin_top = -5
script = ExtResource("5_7uckv")

[node name="LabelContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 6
alignment = 1

[node name="DebuffsContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = -3
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/DebuffsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 0

[node name="LabelPanel" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/DebuffsContainer/MarginContainer" instance=ExtResource("6_a6n1e")]
material = SubResource("ShaderMaterial_llqsw")
layout_mode = 2
region_rect = Rect2(0, 1, 7, 5)

[node name="EffectContainerHolder" type="HBoxContainer" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/DebuffsContainer"]
layout_mode = 2
script = ExtResource("4_8ejy8")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_top = -3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 13)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = -3
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = -3
theme_override_constants/margin_bottom = -1

[node name="GenericPanel" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/MarginContainer/MarginContainer" instance=ExtResource("6_a6n1e")]
material = SubResource("ShaderMaterial_ry73u")
layout_mode = 2
texture = ExtResource("7_iirm8")
region_rect = Rect2(0, 0, 5, 5)

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="AmountLabel" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_t71nv")]
material = SubResource("ShaderMaterial_hxxin")
layout_mode = 2
text = "0"
use_suffix = true
is_whole = true
is_value = true
update_speed = 7.5
translate = false

[node name="MiscLabel" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_t71nv")]
material = SubResource("ShaderMaterial_7aeyj")
layout_mode = 2
text = "/"
translate = false

[node name="MaxAmountLabel" parent="HBoxContainer/MarginContainer/Container/LabelMarginContainer/LabelContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_t71nv")]
material = SubResource("ShaderMaterial_mil1q")
layout_mode = 2
text = "0"
use_suffix = true
is_whole = true
is_value = true
update_speed = 100.0
translate = false

[connection signal="resized" from="HBoxContainer/MarginContainer/Container/LabelMarginContainer" to="." method="_on_label_margin_container_resized"]
